Remove route compilation
Reduce the complexity associated with route compilation in favour of a
simpler system with less code paths.